@@ -1182,18 +1182,6 @@
         </remarks>
       </Docs>
     </Member>
-    <Member MemberName="GdkWindow">
-      <MemberSignature Language="C#" Value="public Gdk.Window GdkWindow { get; };" />
-      <MemberType>Property</MemberType>
-      <ReturnValue>
-        <ReturnType>Gdk.Window</ReturnType>
-      </ReturnValue>
-      <Docs>
-        <summary>To be added</summary>
-        <returns>To be added: an object of type 'Gdk.Window'</returns>
-        <remarks>To be added</remarks>
-      </Docs>
-    </Member>
     <Member MemberName="Allocation">
       <MemberSignature Language="C#" Value="public Gdk.Rectangle Allocation { get; };" />
       <MemberType>Property</MemberType>
@@ -4671,6 +4659,32 @@ handle focus grabs.</returns>
       <Docs>
         <summary>To be added</summary>
         <param name="requisition">a <see cref="T:Gtk.Requisition" /></param>
+        <remarks>To be added</remarks>
+      </Docs>
+    </Member>
+    <Member MemberName="GdkWindow">
+      <MemberSignature Language="C#" Value="public Gdk.Window GdkWindow { set; get; };" />
+      <MemberType>Property</MemberType>
+      <ReturnValue>
+        <ReturnType>Gdk.Window</ReturnType>
+      </ReturnValue>
+      <Parameters />
+      <Docs>
+        <summary>To be added</summary>
+        <returns>a <see cref="T:Gdk.Window" /></returns>
+        <remarks>To be added</remarks>
+      </Docs>
+    </Member>
+    <Member MemberName="Flags">
+      <MemberSignature Language="C#" Value="public int Flags { set; get; };" />
+      <MemberType>Property</MemberType>
+      <ReturnValue>
+        <ReturnType>System.Int32</ReturnType>
+      </ReturnValue>
+      <Parameters />
+      <Docs>
+        <summary>To be added</summary>
+        <returns>a <see cref="T:System.Int32" /></returns>
         <remarks>To be added</remarks>
       </Docs>
     </Member>
