@@ -41,7 +41,6 @@
   <attr path="/api/namespace/enum[@cname='GtkRBNodeColor']" name="hidden">1</attr>
   <attr path="/api/namespace/enum[@cname='GtkRcFlags']" name="hidden">1</attr>
   <attr path="/api/namespace/enum[@cname='GtkToolbarSpaceStyle']" name="hidden">1</attr>
-  <attr path="/api/namespace/enum[@cname='GtkWidgetFlags']" name="hidden">1</attr>
   <attr path="/api/namespace/interface[@cname='GtkCellEditable']/method[@name='EditingDone']" name="name">FinishEditing</attr>
   <attr path="/api/namespace/interface[@cname='GtkCellEditable']/signal[@name='RemoveWidget']" name="name">WidgetRemoved</attr>
   <attr path="/api/namespace/interface[@cname='GtkEditable']/method[@name='GetEditable']" name="name">GetIsEditable</attr>
