@@ -2,6 +2,7 @@
 
 	* en/Gdk/Rectangle.xml : docs for newly changed Isect and Union.
 	* en/Gdk/WindowClass.xml : move existing docs to new member names.
+	* en/Gtk/Widget.xml : run updater for Flags prop addition.
 
 2004-05-28  Mike Kestner  <mkestner@ximian.com>
 
