@@ -1,3 +1,14 @@
+2004-05-31  Mike Kestner  <mkestner@ximian.com>
+
+	* configure.in : Bump version to 0.93 and tag.
+
+2004-05-31  Jeroen Zwartepoorte  <jeroen@xs4all.nl>
+
+	* gtk/Gtk.metadata: unhide WidgetFlags.
+	* gtk/Widget.custom: add setter for GdkWindow prop. Add Flags prop.
+        * gtk/glue/widget.custom: setter for window, accessors for flags.
+	[Fixes #59337]
+
 2004-05-31  Jeroen Zwartepoorte  <jeroen@xs4all.nl>
 
 	* gdk/Gdk.metadata: fix membler names in WindowClass.
